# aws-ec2-instance-agent

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: agent.py  langchain_inspect.py  rag_utils.py
tests/: test_agent.py
